лоадер отслеживает готовность модели + все фото интерьеров оригиналы

--- a/src/style/loader.css
+++ b/src/style/loader.css
@@ -76,22 +76,10 @@
 
 .progress-bar-container .image {
     position: relative;
-    /*margin-bottom: 20px;*/
     overflow: hidden;
-
-    /*Для видео:*/
-    /*height: 310px;*/
-    /*width: 310px;*/
-
-    /*Для gif:*/
-    /*height: 260px;*/
     width: 260px;
 }
 
-/*.progress-bar-container .image img.animated {*/
-/*    animation: rotate-scale-translate 2s infinite ease-in-out;*/
-/*    margin-left: 5px;*/
-/*}*/
 
 .progress-bar-container .image img.no_animated {
     object-fit: cover;
@@ -102,14 +90,6 @@
     color: #FFFFFF;
     margin-top: 10px;
 }
-
-/*.progress-bar-container video {*/
-/*    min-height: 100%;*/
-/*    min-width: 100%;*/
-/*    object-fit: cover;*/
-/*    filter: contrast(110%);*/ /*Нужен, чтобы спрятать задний фон видео (работает только если background родителя статичен)*/
-/*}*/
-
 
 @keyframes rotate-scale-translate {
     0% {
@@ -139,13 +119,18 @@
     border: none;
     border-radius: 10px; /* Задает круглые углы */
     overflow: hidden; /* Скрывает прогресс за пределами полоски */
-    width: 100%;
+    /*width: 100%;*/
     max-width: 400px;
     margin-bottom: 18px;
     height: 6px;
 }
 
+#progress-bar {
+    width: 0;
+}
+
 #hellopreloader_barWrapper {
+    width: 100%;
     background-color: white;
     box-shadow: 0 0 5px 1px rgba(255, 255, 255, 0.50);
 }
@@ -155,18 +140,12 @@
     box-shadow: 0 0 5px 1px rgba(98, 167, 68, 0.50);
 }
 
-/*#progress-bar::-webkit-progress-bar {*/
-/*    background-color: white;*/
-/*    box-shadow: 0 0 5px 1px rgba(255, 255, 255, 0.50);*/
-/*}*/
-
 label {
     color: #ffffff;
     font-family: 'MoscowSans', sans-serif;
     font-size: 16px;
     font-weight: 400;
 }
-
 
 @media (max-width: 1444px) {
     .progress-bar-container::before {
