--- a/src/style/media_models.css
+++ b/src/style/media_models.css
@@ -523,6 +523,20 @@
     }
 }
 
+@media screen and (max-height: 784px) {
+    .tech_spec .tech_spec__description .tech_spec__description-grid_wrapper {
+        gap: 14px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__description-grid_wrapper .tech_spec__mission .tech_spec__text {
+        margin-bottom: 10px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__description-grid_wrapper .tech_spec__outfit .tech_spec__text {
+        margin-bottom: 10px;
+    }
+}
+
 @media screen and (min-width: 700px) and (max-width: 1200px) and (orientation: landscape)  {
     .header {
         top: 20px;
