--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -137,7 +137,8 @@ a-scene {
     position: absolute;
     /*top: 0;*/
     /*left: 0;*/
-    top: 30px;
+    /*top: 30px;*/
+    top: 28px;
     left: 60px;
     pointer-events: none;
     /*right: 0;*/
@@ -226,10 +227,9 @@ a-scene {
 
 .tech_spec {
     position: absolute;
-
-    top: 92px;
+    /*top: 92px;*/
+    top: 84px;
     left: 30px;
-
     z-index: 2;
     /*width: fit-content;*/
     width: 100%;
@@ -465,7 +465,7 @@ a-scene {
 
 .tech_spec__interior {
     position: absolute;
-    top: 92px;
+    top: 84px;
     right: 60px;
     max-width: 200px;
     width: 100%;
